// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should renders correctly 1`] = `
<View
  style={
    [
      [
        undefined,
        {
          "height": 200,
          "width": 750,
        },
      ],
    ]
  }
>
  <View
    style={
      {
        "height": 200,
        "width": 750,
      }
    }
  >
    <View
      color="#BB99DD"
      path={
        {
          "addCircle": [MockFunction],
          "close": [MockFunction] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "cubicTo": [MockFunction] {
            "calls": [
              [
                187.5,
                180,
                375,
                200,
                750,
                190,
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "lineTo": [MockFunction] {
            "calls": [
              [
                0,
                150,
              ],
              [
                750,
                0,
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "moveTo": [MockFunction] {
            "calls": [
              [
                0,
                0,
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        }
      }
      strokeWidth={2}
      style="fill"
    />
  </View>
  <View
    style={
      [
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ],
      ]
    }
  />
</View>
`;

exports[`Header should renders with children 1`] = `
<View
  style={
    [
      [
        undefined,
        {
          "height": 200,
          "width": 750,
        },
      ],
    ]
  }
>
  <View
    style={
      {
        "height": 200,
        "width": 750,
      }
    }
  >
    <View
      color="#BB99DD"
      path={
        {
          "addCircle": [MockFunction],
          "close": [MockFunction] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "cubicTo": [MockFunction] {
            "calls": [
              [
                187.5,
                180,
                375,
                200,
                750,
                190,
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "lineTo": [MockFunction] {
            "calls": [
              [
                0,
                150,
              ],
              [
                750,
                0,
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "moveTo": [MockFunction] {
            "calls": [
              [
                0,
                0,
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        }
      }
      strokeWidth={2}
      style="fill"
    />
  </View>
  <View
    style={
      [
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "center",
          },
          {
            "alignItems": "center",
          },
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "SpaceGrotesk-Regular",
            },
            {
              "fontSize": 14,
            },
            {
              "lineHeight": 18,
            },
          ]
        }
      >
        Header
      </Text>
    </View>
  </View>
</View>
`;
